--- a/API/src/Apps/ProductsSystem.Api/appsettings.json
+++ b/API/src/Apps/ProductsSystem.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "DbProvider": "SqlServer",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.0.11,1433; Database=ProductsSystemDB; User Id = sa; Password=S3cur3P@ssW0rd!;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost,1433; Database=ProductDatabase; User Id = sa; Password=S3cur3P@ssW0rd!;"
+    },
   "AllowedHosts": "*"
 }
